--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^8.2.0",
     "path": "^0.12.7",
     "socket.io": "^4.7.5",
-    "url": "^0.11.3"
+    "url": "^0.11.3",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
